[gd_scene load_steps=6 format=3 uid="uid://c5pricjg55ygp"]

[ext_resource type="Script" path="res://scenes/powerpill.gd" id="1_2e5wm"]
[ext_resource type="Texture2D" uid="uid://dhmbx668t1uug" path="res://assets/sprites/spr_pill_0.png" id="2_i3avn"]
[ext_resource type="AudioStream" uid="uid://dats740u6shm7" path="res://assets/audio/pacman_chomp.wav" id="3_g3u1c"]
[ext_resource type="AudioStream" uid="uid://cmc1m6r0ti3ls" path="res://assets/audio/Select 1.wav" id="3_jdyrb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pesxs"]
radius = 5.0

[node name="PowerPill" type="Area2D" groups=["Items"]]
collision_layer = 3
collision_mask = 0
script = ExtResource("1_2e5wm")
metadata/_edit_group_ = true
metadata/faction = 3

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(-1.78814e-07, -1.78814e-07)
texture = ExtResource("2_i3avn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pesxs")

[node name="SoundPowerup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_g3u1c")

[node name="SoundPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jdyrb")

[node name="Timer" type="Timer" parent="."]

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="SoundPickup" to="." method="_on_sound_pickup_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
